fix multibinds and origins